# list-serial

./: .gitignore  README.md  pyproject.toml
src/listserial/: __init__.py
tests/: test_listserial.py
