[project]
name = "listserial"
version = "0.2.4"
description = "Module to list the available serial ports on the system, showing their name and description."
readme = "README.md"
authors = [
    { name = "Unkn0wnN4m3", email = "87839850+Unkn0wnN4m3@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pyserial==3.5",
]

[project.scripts]
listserial = "listserial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
